2012-12-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gumps/Gump_manager.cc: Fixing previous fix to not delete gumps when you
	  want to move them.
	* combat.cc: Fixed bug #3594342 "Attacking through walls and doors" by using
	  a center-to-center LOF check.
	* actor.cc: The above fix made apparent a bug that allows party members to
	  cause each other o step through walls and doors by moving aside. Since I
	  haven't isolated the circumstances that cause this, and since it is only
	  likely to happen while in combat, I disabled moving aside while in combat
	  as a workaround (the rationale being that you are too busy fighting to
	  play nice).
	Rev 7230:
	* combat.cc: Reverted changes from rev 7229 to fix bug #3598684 "problems
	  attacking medium and large actors (7229 regression)".
	* paths.cc: Speed improvements for Fast_pathfinder_client::is_grabable.
	  Fast_pathfinder_client::is_straight_path will no longer prematurely quit
	  before the end of the path.
	* rect.h: Truly fixed Fixed bug #3594342 "Attacking through walls and doors"
	  (and who knows how many other bugs).
	Rev 7231:
	* npcnear.cc: Disabling old proximity usecode method. The rabbit hack is not
	  needed anymore since patrol schedule does what it should, so it has gone.
	* schedule.*: Only loiter, tend shop, dance, hound, sew and bake schedules
	  seem to call proximity usecode in the original. This fixes bug #3598581
	  "Barks in Serpents' Isle".
	Rev 7233:
	* schedule.cc: Completing dance schedule (fixes bug #3435764 "Dance Schedule
	  broken". Tweaked odds of proximity barks for dance schedule.
	Rev 7234:
	* paths.*, schedule.cc, pathfinder/PathFinder.h: New Fast_pathfinder_client
	  that checks it the proper way. Fixes issues with ships and beds reported
	  on IRC.
	Rev 7236:
	* gamewin.cc: Eliminating segfault when loading a game if map edit mode was
	  active (due to fixed object deletion).
	* actors.cc: Fixed bugs #3127755 "dead NPC bodies become obstacles" and