@@ -1,3 +1,7 @@
+2012-12-29	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* gamewinn.*: Fixed incorrect calling of ES if mapedit was still on when
+	  Exult is closed (caused by rev #7236).
+
 2012-12-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* gumps/Gump_manager.cc: Fixing previous fix to not delete gumps when you
 	  want to move them.
